Dyntopo Sample detail size on hidden mesh causes crash #77047

Closed
opened 2020-05-25 10:24:44 +02:00 by Craig McNaughton · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.97

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Worked: (optional)

Short description of error
Clicking to sample detail size when the currently sculpting mesh is hidden causes a crash

Exact steps for others to reproduce the error
Startup with a general scene
Select the cube
Go to Sculpting
Enable dyntopo
set detailing to constant detail
Hide the cube
Select Sample Detail Size eyedropper
Click anywhere in the 3D scene
- Crash.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.97 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Worked: (optional) **Short description of error** Clicking to sample detail size when the currently sculpting mesh is hidden causes a crash **Exact steps for others to reproduce the error** Startup with a general scene Select the cube Go to Sculpting Enable dyntopo set detailing to constant detail Hide the cube Select Sample Detail Size eyedropper Click anywhere in the 3D scene - Crash.

Added subscriber: @opusmcn

Added subscriber: @opusmcn
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-05-25 10:40:15 +02:00
Member

Can confirm.

I assume the picking has been done from the Properties Editor > Active Tool settings (because Dyntopo settings are hidden from the Toolbar and 3DView sidebar when the object is hidden)

Might just be the fact that we need to hide them in the Properties Editor as well, checking...

Can confirm. I assume the picking has been done from the `Properties Editor` > `Active Tool` settings (because Dyntopo settings are hidden from the Toolbar and 3DView sidebar when the object is hidden) Might just be the fact that we need to hide them in the Properties Editor as well, checking...

This issue was referenced by 42a517779a

This issue was referenced by 42a517779ab3d1f884195282744dd57444641a38

This issue was referenced by 20658e6a29

This issue was referenced by 20658e6a29bd33264d99fcee9cea1886d1c9d0c9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77047
No description provided.